# web_svc/prediction_api.py
@@ -44,62 +44,54 @@ app = connexion.App(__name__, specification_dir='./')
 app.add_api('swagger.yml')
 
 # Create a URL route in our application for "/"
-@app.route('/', methods=['POST'])
-def post():
-    print('***************************')
-    file = request.files['file']
-    print(file)
-    print('***************************')
+# @app.route('/', methods=['POST'])
+# def post():
+#     print('***************************')
+#     file = request.files['file']
+#     print(file)
+#     print('***************************')
 
-    file = request.files['file']
-    if file and allowed_file(file.filename):
-        print('**found file', file.filename)
-        filename = secure_filename(file.filename)
-        file.save(os.path.join(app.config['UPLOAD_FOLDER'], filename))
-        # for browser, add 'redirect' function on top of 'url_for'
+#     file = request.files['file']
+#     if file and allowed_file(file.filename):
+#         print('**found file', file.filename)
+#         filename = secure_filename(file.filename)
+#         file.save(os.path.join(app.config['UPLOAD_FOLDER'], filename))
+#         # for browser, add 'redirect' function on top of 'url_for'
         
-        # Predict image
-        image_dest = os.path.join(UPLOAD_FOLDER, filename)
-        ps = planespotter(model_location=MODEL_LOCATION)
-        ps.predict_image(image_dest)
-        # Save Image
-        ps.save_image(dir_path=app.config['OUTPUT_FOLDER'])
+#         # Predict image
+#         image_dest = os.path.join(UPLOAD_FOLDER, filename)
+#         ps = planespotter(model_location=MODEL_LOCATION)
+#         ps.predict_image(image_dest)
+#         # Save Image
+#         ps.save_image(dir_path=app.config['OUTPUT_FOLDER'])
         
-        image_scored = os.path.join(app.config['OUTPUT_FOLDER'], filename)
+#         image_scored = os.path.join(app.config['OUTPUT_FOLDER'], filename)
         
-        json_pred = ps.save_metadata(dir_path=image_dest)
+#         json_pred = ps.save_metadata(dir_path=image_dest)
         
-#            json_pred = json_pred.replace('\\"',"\"")
+# #            json_pred = json_pred.replace('\\"',"\"")
         
-        print(json_pred)
-        print(json.dumps(json_pred, indent=4))
+#         print(json_pred)
+#         print(json.dumps(json_pred, indent=4))
         
         
-        json_filename = os.path.join(app.config['OUTPUT_FOLDER'], 
-                                        os.path.splitext(filename)[0]+'.json')
-        with open(json_filename, 'w') as outfile:
-            json.dump(json_pred, outfile)
+#         json_filename = os.path.join(app.config['OUTPUT_FOLDER'], 
+#                                         os.path.splitext(filename)[0]+'.json')
+#         with open(json_filename, 'w') as outfile:
+#             json.dump(json_pred, outfile)
         
-        return show_image_html(image_dest,image_scored,json.dumps(json_pred))    
+#         return show_image_html(image_dest,image_scored,json.dumps(json_pred))    
 
-    # return render_template('about.html')
+#     # return render_template('about.html')
 
-@app.route('/', methods=['GET'])
+@app.route('/')
 def home():
     """
     This function just responds to the browser ULR
     localhost:5000/
     :return:        the rendered template 'home.html'
     """
-    return render_template('main1.html')
-
-@app.route('/showAbout')
-def showSignUp():
-    return render_template('about.html')
-
-@app.route('/showPredict')
-def showPredict():
-    return render_template('predict.html')
+    return render_template('home.html')
 
 # If we're running in stand alone mode, run the application
 if __name__ == '__main__':
